apps/wordpress/base/ns.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: wordpress
  labels:
    kubernetes.io/metadata.name: wordpress
    backstage.io/kubernetes-id: wordpress
    istio-injection: disabled #TODO: Fix Istio injection
spec:
  finalizers:
  - kubernetes
