apps/wordpress/base/peerauthentication.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: wordpress-strict
  namespace: istioinaction
spec:
  selector:
    matchLabels:
      app: wordpress
  mtls:
    mode: STRICT
