apps/wordpress/base/wordpress-deploy.yaml
---
# create deployment for wordpress
apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
kind: Deployment
metadata:
  name: wordpress
  namespace: wordpress
  labels:
    app: wordpress
    version: 1.0.1
    tier: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: "wordpress"
      tier: frontend
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: wordpress
        tier: frontend
        version: 2.0.0
      # annotations:
      #   sidecar.istio.io/proxyCPU: "50m"
      #   sidecar.istio.io/proxyMemory: "128Mi"
      #   sidecar.istio.io/proxyCPULimit: "100m"
      #   sidecar.istio.io/proxyMemoryLimit: "128Mi"
    spec:
      containers:
      - name: wordpress
        image: wordpress:6.0.0-apache
        resources:
          requests:
            memory: 256Mi
            cpu: 20m
          limits:
            memory: 512Mi
            cpu: 50m
        ports:
        - containerPort: 80
          name: wordpress
        volumeMounts:
        - name: wordpress-persistent-storage
          mountPath: "/var/www/html"          # which data will be stored
        startupProbe:
          httpGet:
            httpHeaders:
            - name: Host
              value: www.diegoluisi.eti.br
            path: /wp-login.php
            port: http
          initialDelaySeconds: 10
          timeoutSeconds: 5
          failureThreshold: 30
          successThreshold: 1
          periodSeconds: 10
        livenessProbe:
          httpGet:
            httpHeaders:
            - name: Host
              value: www.diegoluisi.eti.br
            path: /wp-login.php
            port: http
          initialDelaySeconds: 30
          timeoutSeconds: 5
          failureThreshold: 5
          successThreshold: 1
          periodSeconds: 10
        readinessProbe:
          failureThreshold: 3
          httpGet:
            httpHeaders:
            - name: Host
              value: www.diegoluisi.eti.br
            path: /wp-login.php
            port: http
          initialDelaySeconds: 10
          periodSeconds: 5
          successThreshold: 1
          timeoutSeconds: 30
      volumes:
      - name: wordpress-persistent-storage
        persistentVolumeClaim:
          claimName: wordpress-persistent-storage
