apps/wordpress/base/deploy-wordpress.yml
---
# create a service for wordpress
apiVersion: v1
kind: Service
metadata:
  name: wordpress
  namespace: wordpress
  labels:
    app: wordpress
spec:
  ports:
    - port: 80
      name: http-frontend
  selector:
    app: wordpress
    tier: frontend
  type: ClusterIP
---
# create deployment for wordpress
apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
kind: Deployment
metadata:
  name: wordpress
  namespace: wordpress
  labels:
    app: wordpress
    version: 1.0.1
spec:
  selector:
    matchLabels:
      app: wordpress'
      tier: 'frontend'
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: wordpress
        tier: frontend
        version: 1.0.1
    spec:
      containers:
      - name: wordpress
        image: wordpress:5.8.3-apache
        resources:
          requests:
            cpu: 100m
          limits:
            cpu: 300m
        ports:
        - containerPort: 80
          name: wordpress
        volumeMounts:
        - name: wordpress-persistent-storage
          mountPath: "/var/www/html"          # which data will be stored
      volumes:
      - name: wordpress-persistent-storage
        persistentVolumeClaim:
          claimName: wordpress-persistent-storage
