apps/wordpress/base/mysql-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: wordpress-mysql
  namespace: wordpress
  labels:
    app: wordpress
spec:
  ports:
    - port: 3306
      name: tcp-mysql
  selector:
    app: wordpress
    tier: mysql
  clusterIP: None
