apps/wordpress/base/auth-policy.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: wordpress-network-filters
  namespace: wordpress
spec:
  selector:
    matchLabels:
      app: wordpress
  action: DENY
  rules:
    - to:
        - operation:
            methods: ["GET", "POST", "OPTIONS", "DELETE", "PATCH"]
      when:
        - key: request.headers[x-envoy-external-address]
          notValues:
            - "189.19.121.35"
            - "94.62.74.120" # Diego

      # - "172.31.0.0/24" # Hosts Network
      # - "10.233.0.0/16" # Pods Network
      # - "34.205.60.141" # Istio GW
